--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | 2 | 3</h3>
   </div>
   <div class="content">
-	 pexels-ben-mack-5326919.jpg
+	  <img src="images/pexels-ben-mack-5326919.jpg" alt="Welcome" width="960" height="500">
+	
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
