--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="volleyball/index.html">Volleyball</a></h3>
   </div>
   <div class="content">
-	  <img src="images/pexels-ben-mack-5326919.jpg" alt="Welcome" width="960" height="500">
+	  <img src="images/Welcome.jpg" alt="Welcome" width="960" height="500">
 	
 	</div>
   <div class="footer">
